# ProteinMPNN

./: .gitignore  BASELINE_RUNBOOK.md  DATASET.md  DATASET_VERSIONS.md  MODEL_CARD_2026_STAGE2A.md  MRNA_ALIGNMENT.md  README.md  STAGE2A_RUNBOOK.md  design_manifest.example.json  design_manifest.schema.json  requirements.txt  run_train.sh
design_flow_stage3/: README.md  __init__.py  esmfold2_job_runner.py  run_stage3_esmfold2.sh
protein_mrna_pipeline/: README.md  pyproject.toml
protein_mrna_pipeline/docs/: AFFORDABLE_GPU_DEPLOYMENT.md  ESMFOLD2_FAST_RUNBOOK.md  PROTEINMPNN_REFOLD_PILOT.md  SEVEN_DAY_EXECUTION_PLAN.md
protein_mrna_pipeline/examples/: target-package.example.json
protein_mrna_pipeline/src/protein_mrna_pipeline/: __init__.py  adapters.py  benchmark.py  cli.py  contracts.py  design_refold.py  esmfold2_runner.py  proteinmpnn_pilot.py  run_store.py  structure_agreement.py
protein_mrna_pipeline/src/protein_mrna_pipeline/schemas/: benchmark-suite.schema.json  candidate-record.schema.json  run-manifest.schema.json  target-package.schema.json  tool-result.schema.json  work-item.schema.json
protein_mrna_pipeline/tests/: test_esmfold2_runner.py  test_pipeline.py  test_proteinmpnn_pilot.py  test_structure_agreement.py
scripts/: README.md  benchmark_throughput.sh  build_pdb_2026_dataset.sh  build_pdb_2026_oversized_crops.sh  build_pdb_2026_tar_shards.sh  download_dataset_50.sh  download_dataset_fast.sh  download_dataset_parts.sh  download_rcsb_sequence_clusters.sh  download_wwpdb_assemblies_https.py  download_wwpdb_entries_index.sh  ensure_venv_pip.sh  (+41 more)
(+21 files in other folders)
